@@ -2,20 +2,27 @@ package com.example.security;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import com.example.model.MyAppUser;
 
-public class CustomOAuthUser implements OAuth2User{
+public class AppUserPrincipal implements UserDetails, OAuth2User {
 
     private final MyAppUser user;      // persisted DB user
     private final Map<String, Object> attributes; // raw OAuth2 attributes
 
-    public CustomOAuthUser(MyAppUser user, Map<String, Object> attributes) {
+    public AppUserPrincipal(MyAppUser user) {
+        this.user = user;
+        this.attributes = Collections.emptyMap();
+    }
+
+    public AppUserPrincipal(MyAppUser user, Map<String, Object> attributes) {
         this.user = user;
         this.attributes = attributes;
     }
@@ -27,7 +34,7 @@ public class CustomOAuthUser implements OAuth2User{
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("USER"));
+        return List.of(new SimpleGrantedAuthority("USER"));
     }
 
     @Override
@@ -47,6 +54,49 @@ public class CustomOAuthUser implements OAuth2User{
             email = getName() + "@github.com";
         }
         return email.toString();
+    }
+
+    @Override
+    public String getPassword() {
+        return user.getPassword();
+    }
+
+    @Override
+    public String getUsername() {
+        return user.getUsername();
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return !user.getLocked();
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return user.getEnabled();
+    }
+
+    // === OAuth2User methods ===
+    public String getProvider() {
+        return user.getProvider();
+    }
+
+    public String getProviderId() {
+        return user.getProviderId();
+    }
+
+    public MyAppUser getUser() {
+        return user;
     }
 
 }
